--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bulma": "^0.8.2",
+    "bulma-extensions": "^6.2.7",
     "next": "9.3.5",
     "next-redux-wrapper": "^6.0.0-rc.7",
     "react": "16.13.1",
