--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bulma-extensions": "^6.2.7",
     "next": "9.3.5",
     "next-redux-wrapper": "^6.0.0-rc.7",
+    "prismjs": "^1.20.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
