--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bulma": "^0.8.2",
     "bulma-extensions": "^6.2.7",
     "next": "9.3.5",
@@ -17,6 +18,7 @@
     "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.26.5"
   }
 }
